--- a/backend/data_collection_and_uploading/pinecone.ipynb
+++ b/backend/data_collection_and_uploading/pinecone.ipynb
@@ -170,7 +170,7 @@
    ],
    "source": [
     "res = embeddings.embed_query(\"The Jagran Times\")\n",
-    "print(len(res))"
+    "print(len(res)) # checking the dimension of the embeddings so that the pinecone vector db can be configured accordingly "
    ]
   },
   {
@@ -194,7 +194,8 @@
     "from pinecone import Pinecone, ServerlessSpec\n",
     "index_name = \"llama\"\n",
     "pc = Pinecone(api_key=api_key)\n",
-    "index = pc.Index(index_name)"
+    "index = pc.Index(index_name)\n",
+    "# Setting up the pinecone index the index name in this case is llama "
    ]
   },
   {
